07_retirement/grade.txt
Grading at Sat May 23 21:15:35 UTC 2020
Attempting to compile retirement.c
retirement.c:85:1: error: expected identifier or ‘(’ before ‘}’ token
 }
 ^
The code did not compile!

Overall Grade: F
